--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/togalid/zenn_blog#readme",
   "dependencies": {
     "zenn-cli": "^0.1.79"
+  },
+  "devDependencies": {
+    "textlint": "^11.9.0",
+    "textlint-rule-preset-ja-spacing": "^2.0.2",
+    "textlint-rule-preset-ja-technical-writing": "^6.0.0"
   }
 }
